--- a/www/personalPages/locations.html
+++ b/www/personalPages/locations.html
@@ -5,6 +5,17 @@
 	<h1>Locations to Visit</h1>
 	<link rel="stylesheet" type="text/css" href="../CSS/personalStyle.css">
 	<img src="hackleBarney.jpg" alt="Hackle Barney Park">
+	<style>
+	body{
+		background-color: rgb(10, 175, 0);
+		opacity: 1;
+	}
+	p{
+		opacity: .7;
+		background-color: white;
+		color: #9400D3;
+	}
+	</style>
 </head>
 
 <body>
