--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,9 @@
 		<a href=personalPages/volleyball.html> Volleyball Site </a>
 		<br>
 		<a href=personalPages/locations.html> Future Destinations </a>
+
+		<h3> Constitution Assignments </h3>
+		<a href=constitution/constitution.html> Constitution Article One </a>
 </body>
 
 </html>
