--- a/www/personalPages/volleyball.html
+++ b/www/personalPages/volleyball.html
@@ -35,7 +35,7 @@
 
 <h3> Contact Me </h3>
 
-<form action="http://formspree.io/your_email@tcnj.edu" method="POST">
+<form action="https://www.tcnj.edu/~hutchid6/forms/thanks.html" method="POST">
 Name: <input type="text" name="name" > <br>
 Email: <input type="email" name="_replyto"> <br>
 <input type="submit" value="Send"> <br>
