--- a/www/personalPages/volleyball.html
+++ b/www/personalPages/volleyball.html
@@ -1,50 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title> Hutchinson Volleyball </title>
-	<h1> Dalton Hutchinson Volleyball </h1>
+	<meta charset ="utf-8">
 	<link rel="stylesheet" type="text/css" href="../CSS/personalStyle.css">
-	<img src="SJVBCGroup.JPG" alt="South Jersey Volleyball Players" width="1000" height="700">
+	<link href="https://fonts.googleapis.com/css?family=Crimson+Text|Raleway&display=swap" rel="stylesheet">
+	<title> Dalton's Volleyball </title>
 </head>
 
+<header>
+		<ul class="navBar">
+		<li class="navBar"><a href=../index.html class="navBar">Home</a></li>
+		<li class="navBar"><a href=../positioningLab/positioning.html class="navBar">Resume</a></li>
+		<li class="navBar"><a href=../assignmentsPage.html class="navBar">Assignments</a></li>
+		<li class="navBar"><a href=../personalPages/volleyball.html class="navBar">Volleyball</a></li>
+		<li class="navBar"><a href=../imagesPage.html class="navBar">Images</a></li>
+		<li class="navBar"><a href=../contactPage.html class="navBar">Contact Me</a></li>
+	</ul>
+</header>
+
 <body>
-	<p> I have been playing volleyball for 5 years now, and have had a great time doing it. High school volleyball was an extremely fun, yet competitive environment to play in. I'm excited to play more in college. </p>
+	<h1>Volleyball</h1>
+	<img src="celebration.JPG" alt="Spike celebration">
+	<h2 id="statsHeader">Stats</h2>
 
-
-
-	<h2> Some high school stats </h2>
-	<table style="width:100%">
+	<div id="statsDiv">
+	<h3>High School</h3>
+	<table>
 	<tr>
 		<th>Career Blocks</th>
 		<th>Career Kills</th>
+		<th>Career Digs</th>
+		<th>Career Assists</th>
 	</tr>
 	<tr>
-		<th>129</th>
-		<th>215</th>
+		<td>129</td>
+		<td>215</td>
+		<td>29</td>
+		<td>5</td>
 	</tr>
-</table>
-	<a href=http://highschoolsports.nj.com/player/dalton-hutchinson/>Full stats</a>
+	</table>
+	</div>
+	<a href=http://highschoolsports.nj.com/player/dalton-hutchinson/ id="statsLink">Full stats</a>
 	<br>
-	<img src="celebration.JPG" alt="Spike celebration">
-	<h3>Other Links</h3>
-	<a href="../index.html">Assignments Page</a>
-	<br>
-	<a href="locations.html">Locations Site</a>
+	<p id="volleyballText"> I have been playing volleyball for 5 years now,
+		 and have had a great time doing it. High school volleyball was an
+		  extremely fun, yet competitive environment to play in. I'm excited to play more in college. </p>
+
 </body>
 
-<h3> Contact Me </h3>
 
-<form action="https://www.tcnj.edu/~hutchid6/forms/thanks.html" method="POST">
-Name: <input type="text" name="name" > <br>
-Email: <input type="email" name="_replyto"> <br>
-<input type="submit" value="Send"> <br>
-
-<input type="hidden" name="next" value="https://www.tcnj.edu/~hutchid6/forms/thanks.html">
-
-<input type="hidden" name="_subject" value="New submission!" >
-
-<input type="text" name="_gotcha" style="display:none">
-</form>
 
 </html>
